--- a/packages/my-todos-server/package.json
+++ b/packages/my-todos-server/package.json
@@ -4,16 +4,19 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
+    "dev": "prisma format && prisma generate && pnpm prisma:db && tsx watch src/index.ts",
+    "prisma:db": "dotenv -e .env.local -- prisma db push",
     "tsc": "tsc --init",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prisma": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.14.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "dotenv-cli": "^7.4.2",
     "express": "^4.19.2",
     "http-status-codes": "^2.3.0",
     "knex": "^3.1.0",
@@ -25,6 +28,7 @@
     "@types/express": "^4.17.21",
     "@types/mysql": "^2.15.26",
     "@types/node": "^20.12.7",
+    "prisma": "^5.14.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.7.2",
     "typescript": "^5.4.5"
