refactor(my-todos-server): 레이어드 아키텍처 적용

--- a/packages/my-todos-server/package.json
+++ b/packages/my-todos-server/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "prisma format && prisma generate && pnpm prisma:db && tsx watch src/index.ts",
+    "dev": "prisma format && prisma generate && pnpm prisma:db && dotenv -e .env.local -- tsx watch src/index.ts",
     "prisma:db": "dotenv -e .env.local -- prisma db push",
     "tsc": "tsc --init",
     "prisma": "echo \"Error: no test specified\" && exit 1"
